--- a/css/style.css
+++ b/css/style.css
@@ -80,14 +80,14 @@ a {
 /* Large */
 @media (min-width: 1400px) {
     .container {
-        width: 1170px;
+        width: 1287px;
     }
 }
 
 /*Start Header Section*/
 .header {
     position: relative;
-    padding: 15px 0;
+    padding: 9px 0;
 }
 
 .header .container {
@@ -113,13 +113,14 @@ a {
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 27px;
-    padding-top: 15px;
+    padding-top: 8px;
 }
 
 .header .container .navbar ul li a {
     text-transform: uppercase;
     color: var(--darkGrayishViolet);
     letter-spacing: 1px;
+    font-size: 14px;
     padding: 10px 20px;
     font-weight: 700;
     border: 2px solid transparent;
