--- a/css/style.css
+++ b/css/style.css
@@ -80,14 +80,14 @@ a {
 /* Large */
 @media (min-width: 1400px) {
     .container {
-        width: 1287px;
+        width: 1278px;
     }
 }
 
 /*Start Header Section*/
 .header {
     position: relative;
-    padding: 9px 0;
+    padding: 16px 0;
 }
 
 .header .container {
@@ -121,7 +121,7 @@ a {
     color: var(--darkGrayishViolet);
     letter-spacing: 1px;
     font-size: 14px;
-    padding: 10px 20px;
+    padding: 7px 20px;
     font-weight: 700;
     border: 2px solid transparent;
 }
@@ -145,7 +145,7 @@ a {
     background-color: var(--darkViolet);
     position: relative;
     padding: 50px 0;
-    margin-bottom: 250px;
+    margin-bottom: 153px;
 }
 
 .landing::after {
@@ -246,7 +246,7 @@ a {
 }
 
 .about .container > h2 {
-    font-size: 5rem;
+    font-size: 4.4rem;
     position: relative;
 }
 
@@ -256,15 +256,15 @@ a {
     background-color: var(--darkGrayishViolet);
     height: 2px;
     width: 150px;
-    top: -50px;
-    left: 0;
+    top: -42px;
+    left: -2px;
 }
 
 .about .container .about-content {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(340px, 1fr));
-    gap: 20px;
-    margin-top: 100px;
+    gap: 55px;
+    margin-top: 58px;
 }
 
 .about .container .about-content .box {
@@ -275,21 +275,22 @@ a {
 }
 
 .about .container .about-content .box img {
-    margin-bottom: 40px;
+    margin-bottom: 45px;
 }
 
 .about .container .about-content .box h3 {
-    font-size: 1.5rem;
+    font-size: 1.7rem;
 }
 
 .about .container .about-content .box p {
-    margin-top: 30px;
+    margin-top: 10px;
     margin-bottom: 160px;
     color: var(--darkGrayishViolet);
 }
 
 .about .container .poster {
-    padding: 80px;
+    width: 100%;
+    padding: 71px 80px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -301,8 +302,9 @@ a {
 
 .about .container .poster h2 {
     color: var(--whiteColor);
-    font-size: 2.5rem;
+    font-size: 3.2rem;
     line-height: 1;
+    letter-spacing: 1px;
 }
 
 .about .container .poster a {
@@ -310,8 +312,9 @@ a {
     border: 1px solid var(--veryLightGray);
     color: var(--whiteColor);
     letter-spacing: 1px;
-    padding: 10px 20px;
+    padding: 6px 15px;
     font-weight: 700;
+    cursor: pointer;
 }
 
 .about .container .poster a:hover {
@@ -333,7 +336,7 @@ a {
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding: 25px 0;
+    padding: 28px 0;
     border-bottom: 1px solid #d9d9d9;
 }
 
@@ -369,6 +372,7 @@ a {
     text-transform: uppercase;
     letter-spacing: 1px;
     color: var(--darkGrayishViolet);
+    font-size: 0.9rem
 }
 
 .footer .container .footer-bottom .box ul {
@@ -389,6 +393,7 @@ a {
     letter-spacing: 1px;
     color: var(--darkViolet);
     font-weight: 700;
+    font-size: 14px;
 }
 
 .footer .container .footer-bottom .box ul li a:hover {
@@ -602,6 +607,6 @@ a {
 
 @media(min-width: 1200px) {
     .footer {
-        padding: 50px 160px;
+        padding: 44px 120px;
     }
 }
